<resources>
    <string name="app_name">Random Location</string>
    <string name="tab_layout_first">RANDOM</string>
    <string name="tab_layout_second">OPTIONAL</string>
    <string name="tab_layout_third">SAVED</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="random_go_to_a_random_location">Go To A Random Location</string>
    <string name="random_settings">Settings</string>
    <string name="special_latitude">Latitude</string>
    <string name="special_longitude">Longitude</string>
    <string name="special_go_location">Go To Location</string>
    <string name="special_info">Info</string>
    <string name="records_search">Search</string>
    <string name="records_delete_all">Delete All</string>
    <string name="records_deleted_all">Everything is deleted.</string>
    <string name="records_not_deleted">You dont have any records.</string>
    <string name="settings">Settings</string>
    <string name="settings_dark_mode">Dark Mode Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="title_activity_settings">Settings</string>
    <string name="night_mode_activated">Dark Mode Activated</string>
    <string name="night_mode_deactivated">Dark Mode Deactivated</string>
    <string name="language_english">English</string>
    <string name="language_turkish">Turkish</string>
    <string name="title_activity_maps">Map</string>
    <string name="zoom_value">Zoom Value</string>
    <string name="cancel_alert_dialog">Cancel</string>
    <string name="confirm_alert_dialog">Confirm</string>
    <string name="select_zoom_value_alert_text">Select Zoom Value</string>
    <string name="map_save">save</string>
    <string name="location_name_map">Location Name</string>
    <string name="location_name_map_hint">Location Name</string>
    <string name="refresh">Refresh</string>
</resources>