<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/plight"
    tools:context=".ui.fragment.SpecialFragment">

    <EditText
        android:id="@+id/editTextLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:maxLength="10"
        android:singleLine="true"
        android:textColor="@color/black"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="22sp"
        android:hint="@string/special_latitude"
        android:inputType="numberDecimal"
        />

    <EditText
        android:id="@+id/editTextLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:maxLength="11"
        android:singleLine="true"
        android:textColor="@color/black"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="22sp"
        android:hint="@string/special_longitude"
        android:inputType="numberDecimal"
         />

    <Button
        android:id="@+id/buttonGoLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/button_background"
        android:text="@string/special_go_location"
        android:textAllCaps="false"
        android:textSize="20sp"/>

</LinearLayout>